--- a/Minesweeper.css
+++ b/Minesweeper.css
@@ -1,20 +1,23 @@
-html, body {
+html,
+body {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
 }
+
 #menu {
     display: none;
 }
-#board{
+
+#board {
     height: 100%;
     width: 100%;
     padding: 0;
     margin: 0;
     display: none;
 }
-.tile {}
+
 .tile:focus {
     background-color: lightblue;
 }
