added cell number calculation

--- a/Minesweeper.css
+++ b/Minesweeper.css
@@ -1,7 +1,7 @@
 html,
 body {
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     padding: 0;
     margin: 0;
 }
@@ -11,8 +11,8 @@ body {
 }
 
 #board {
-    height: 100%;
-    width: 100%;
+    /*height: 100vh;
+    width: 100vw;*/
     padding: 0;
     margin: 0;
     display: none;
