--- a/Minesweeper.css
+++ b/Minesweeper.css
@@ -4,6 +4,7 @@ body {
     width: 100vw;
     padding: 0;
     margin: 0;
+    overflow: hidden;
 }
 
 #menu {
@@ -11,8 +12,10 @@ body {
 }
 
 #board {
-    /*height: 100vh;
-    width: 100vw;*/
+    position: absolute;
+    top: 0%;
+    left: 0%;
+    transform: translate(50vw, 50vh) translate(-50%, -50%);
     padding: 0;
     margin: 0;
     display: none;
